syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

package domain.scheduler;

option (scalapb.options) = {
  flat_package: false
  single_file: true
  import: "domain.BaseDomainEvent"
  preamble: "// $COVERAGE-OFF$Generated code"
  preamble: "sealed trait DomainEvent extends BaseDomainEvent"
};

message Registered {
  option (scalapb.message).extends = "domain.scheduler.accesspass.DomainEvent";
  bytes signedData = 1;
  google.protobuf.Timestamp timestamp = 100;
}
